...
                    </userDefinedRuntimeAttributes>
                </stackView>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NS8-Xy-60j">
                    <rect key="frame" x="0.0" y="102" width="414" height="794"/>
                    <color key="backgroundColor" name="screenBackground"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="facts_table_view"/>
                    </userDefinedRuntimeAttributes>
                </tableView>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xxR-kv-oF4">
                    <rect key="frame" x="-200" y="52" width="120" height="34"/>
                    <subviews>
                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Technology" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uJ7-gL-7Xo">
                            <rect key="frame" x="38" y="10" width="70" height="14.5"/>
                            <fontDescription key="fontDescription" type="boldSystem" pointSize="12"/>
                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                            <nil key="highlightedColor"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="current_search_label"/>
                            </userDefinedRuntimeAttributes>
                        </label>
                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WSM-Go-Bq9">
                            <rect key="frame" x="12" y="0.0" width="18" height="34"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="18" id="fgU-DP-mzt"/>
                            </constraints>
                            <state key="normal" image="close_icon"/>
                            <userDefinedRuntimeAttributes>
                                <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="clear_search_button"/>
                            </userDefinedRuntimeAttributes>
                        </button>
                    </subviews>
                    <color key="backgroundColor" red="0.16862745100000001" green="0.66666666669999997" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="bottom" secondItem="WSM-Go-Bq9" secondAttribute="bottom" id="9m6-yT-gIn"/>
...
                        <constraint firstAttribute="trailing" secondItem="uJ7-gL-7Xo" secondAttribute="trailing" constant="12" id="TV7-wL-dr5"/>
                        <constraint firstItem="WSM-Go-Bq9" firstAttribute="top" secondItem="xxR-kv-oF4" secondAttribute="top" id="d0A-6T-xHR"/>
                        <constraint firstItem="uJ7-gL-7Xo" firstAttribute="leading" secondItem="WSM-Go-Bq9" secondAttribute="trailing" constant="8" id="tNN-VB-Vle"/>
                        <constraint firstItem="WSM-Go-Bq9" firstAttribute="leading" secondItem="xxR-kv-oF4" secondAttribute="leading" constant="12" id="vaZ-sM-so6"/>
                    </constraints>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="current_search_view"/>
                    </userDefinedRuntimeAttributes>
                </view>
                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k33-D5-3S0" customClass="AnimationView" customModule="Lottie">
                    <rect key="frame" x="358" y="52" width="34" height="34"/>
                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                    <constraints>
...
