...
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vxr-MR-77e">
                    <rect key="frame" x="0.0" y="151" width="414" height="745"/>
                    <color key="backgroundColor" name="screenBackground"/>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="past_searches_view"/>
                    </userDefinedRuntimeAttributes>
                </tableView>
                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Suggestions" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="F7b-d0-WjI">
                    <rect key="frame" x="16" y="60" width="97" height="19.5"/>
                    <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                    <nil key="textColor"/>
...
                        <size key="itemSize" width="128" height="128"/>
                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                    </collectionViewFlowLayout>
                    <userDefinedRuntimeAttributes>
                        <userDefinedRuntimeAttribute type="string" keyPath="accessibilityIdentifier" value="suggestions_view"/>
                    </userDefinedRuntimeAttributes>
                </collectionView>
            </subviews>
            <color key="backgroundColor" name="screenBackground"/>
            <constraints>
                <constraint firstItem="SDP-qH-snL" firstAttribute="top" secondItem="fs6-AM-lD8" secondAttribute="bottom" constant="16" id="IfE-if-eDH"/>
...
