...
    // constraints
    @IBOutlet weak var searchViewLeadingConstraint: NSLayoutConstraint!
    @IBOutlet var tableViewTopSafeAreaConstraint: NSLayoutConstraint!
    
    lazy var searchBarButtonItem: UIBarButtonItem = {
        let button = UIBarButtonItem(image: Asset.searchIcon.image, style: .plain, target: nil, action: nil)
        button.accessibilityIdentifier = "search_bar_button_item"
        return button
    }()
    
    /// Datasource for FactsTableView
    private lazy var factsDataSource = RxTableViewSectionedAnimatedDataSource<FactsSectionViewModel>(
        configureCell: { [weak self] _, tableView, indexPath, factViewModel -> UITableViewCell in
...
